[package]
description = "ethereum vm builtin"
name = "ethcore-builtin"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bn = { git = "https://github.com/paritytech/bn", default-features = false }
byteorder = "1.3.2"
common-types = { path = "../types" }
eip-152 = { path = "../../util/EIP-152" }
ethereum-types = "0.9.2"
ethjson = { path = "../../json" }
keccak-hash = "0.5.0"
log = "0.4"
num = "0.2"
parity-bytes = "0.1"
parity-crypto = { version = "0.6.2", features = ["publickey"] }
eth_pairings = { git = "https://github.com/prestwich/eip1962.git", default-features = false, features = ["eip_2537", "eip_2539"], rev = "596c64257c86c63a692e664af7a458a60a33ad8b" }

[dev-dependencies]
hex-literal = "0.2.1"
maplit = "1.0.2"
